--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -9,24 +9,28 @@
 <body>
     <h1>Our Menu</h1>
     <section class="col-lg-4 col-md-6 col-sm-12">
-        <div class="card">
-            <h2>Chicken</h2>
+        <div id="chicken" class="card">
+            <div class="cardtitle">
+                <h2 class="col-lg-4">Chicken</h2>
+            </div>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas quisquam saepe quos inventore quo autem, accusantium, molestias commodi quibusdam tempora architecto modi eum voluptatum unde voluptate ab facere nostrum adipisci.</p>
         </div>
 
     </section>
 
     <section class="col-lg-4 col-md-6 col-sm-12">
-        <div class="card">
-
-            <h2>Beef</h2>
+        <div id="beef" class="card">
+            <div class="cardtitle">
+                <h2 class="col-lg-4">Beef</h2>
+            </div>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas quisquam saepe quos inventore quo autem, accusantium, molestias commodi quibusdam tempora architecto modi eum voluptatum unde voluptate ab facere nostrum adipisci.</p>
         </div>
     </section>
     <section class="col-lg-4 col-md-12 col-sm-12">
-        <div class="card">
-
-            <h2>Sushi</h2>
+        <div  id="sushi" class="card">
+            <div class="cardtitle">
+                <h2 class="col-lg-4">Sushi</h2>
+            </div>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas quisquam saepe quos inventore quo autem, accusantium, molestias commodi quibusdam tempora architecto modi eum voluptatum unde voluptate ab facere nostrum adipisci.</p>
         </div>
     </section>
